Fixed failing tests after merging main